# notification-service

./: .gitignore  Dockerfile  Makefile  README.md  docker-build.sh  docker-compose.yml  pyproject.toml  run_tests.sh
notification_service/: db.py  main.py  service.py  smtp.py
tests/: test_system.py  test_units.py
